--- a/app/src/main/res/layout/activity_alert.xml
+++ b/app/src/main/res/layout/activity_alert.xml
@@ -9,19 +9,16 @@
 
     <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/recyclerView"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="1.0"
-    />
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/share"
+            android:layout_height="0dp"/>
     <Button
             android:text="@string/share"
             android:layout_width="0dp"
