--- a/app/src/main/res/layout/row_alert.xml
+++ b/app/src/main/res/layout/row_alert.xml
@@ -16,7 +16,8 @@
             app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/cardView" android:layout_marginTop="8dp"
             android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
 
-            android:layout_marginBottom="8dp">
+            android:layout_marginBottom="8dp" app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="1.0">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -30,17 +31,15 @@
                     android:src="@mipmap/ic_launcher_round"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
-
             <TextView
-                    android:id="@+id/stationName"
+                    android:text="TextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
-                    tools:text="Metro Center"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    android:id="@+id/description" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp"/>
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
