--- a/app/src/main/res/layout/row_alert.xml
+++ b/app/src/main/res/layout/row_alert.xml
@@ -24,22 +24,16 @@
                 android:layout_margin="8dp"
                 android:id="@+id/cardViewConstraint">
 
-            <ImageView
-                    android:id="@+id/icon"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
-                    android:src="@mipmap/ic_launcher_round"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
             <TextView
                     android:text="TextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/description" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+                    android:layout_width="269dp"
+                    android:layout_height="101dp"
+                    android:id="@+id/description"
+                    android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp"/>
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
